# my-first-project.

./: README.md
errandbot_v1.0/: note.txt
errandbot_v1.0/errandbot_bringup/: CMakeLists.txt  package.xml
errandbot_v1.0/errandbot_controller/: CMakeLists.txt  package.xml
errandbot_v1.0/errandbot_description/: CMakeLists.txt  package.xml
errandbot_v1.0/errandbot_firmware/: CMakeLists.txt  errandbot_interface.xml  package.xml
errandbot_v1.0/errandbot_localization/: CMakeLists.txt  package.xml
errandbot_v1.0/errandbot_mapping/: CMakeLists.txt  package.xml
errandbot_v1.0/errandbot_navigation/: CMakeLists.txt  package.xml
errandbot_v1.0/errandbot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
errandbot_v2.0/: errandbot.txt  note.txt
errandbot_v2.0/errandbot_navigation/: CMakeLists.txt
errandbot_v2.1/: note.txt
errandbot_v2.1/errandbot_bringup/: CMakeLists.txt  package.xml
errandbot_v2.1/errandbot_description/: CMakeLists.txt  package.xml
errandbot_v2.1/errandbot_description/launch/: display.launch.py  gazebo.launch.py  robot_state_publisher.launch.py  spawn.launch.py
errandbot_v2.1/errandbot_description/models/errandbot/: model.sdf  model_error.sdf
errandbot_v2.1/errandbot_description/models/errandbot_common/: model.config
errandbot_v2.1/errandbot_description/params/: errandbot_bridge.yaml
errandbot_v2.1/errandbot_description/rviz/: erb.rviz
errandbot_v2.1/errandbot_description/urdf/: errandbot.urdf
errandbot_v2.1/errandbot_navigation/: package.xml
kaybot_v1.0/kaybot_bringup/: CMakeLists.txt  package.xml
kaybot_v1.0/kaybot_controllers/: CMakeLists.txt  kaybot_controller_plugin.xml  package.xml
(+96 files in other folders)
